# Vampira

./: README.md  pyproject.toml  requirements.txt  run.py  settings.py
resources/json/: mob_spritesheet_1.json
src/: game.py
src/map/: map.py
src/sprites/: map_sprites.py  mob.py  player.py  wall.py
utils/: functions.py
